# api/router/router.go
@@ -45,6 +45,7 @@ func Setup(db *sqlx.DB) *gin.Engine {
 
 			activity := &handlers.ActivityHandler{DB: db}
 			protected.GET("/groups/:id/activity", activity.List)
+			protected.GET("/user/activity", activity.ListUser)
 
 			balances := &handlers.BalanceHandler{DB: db}
 			protected.GET("/groups/:id/balances", balances.GroupBalances)
